[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retryguard"
version = "1.0.0"
description = "Retryable and non-retryable error classifier for Python backends"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []
authors = [
  { name = "Rhanny Urbis", email = "raniurbis@gmail.com" }
]
keywords = ["retry", "error classification", "resilience", "celery", "tenacity", "httpx", "sqlalchemy", "postgres", "redis", "aws", "boto3", "gcp", "google-cloud", "azure"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rnx2024/retryguard"
Repository = "https://github.com/rnx2024/retryguard"
Issues = "https://github.com/rnx2024/retryguard/issues"
Changelog = "https://github.com/rnx2024/retryguard/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/retryguard/"

[project.optional-dependencies]
http = ["httpx>=0.27.0,<2.0", "requests>=2.32.0,<3.0"]
db = ["SQLAlchemy>=2.0.0,<3.0", "asyncpg>=0.29.0,<1.0", "psycopg>=3.1.0,<4.0"]
redis = ["redis>=4.2.0,<6.0"]
aws = ["botocore>=1.34.0,<2.0"]
gcp = ["google-api-core>=2.0.0,<3.0"]
azure = ["azure-core>=1.28.0,<2.0"]
retry = ["tenacity>=8.2.0,<10.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "coverage[toml]>=7.0.0", "ruff>=0.6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/retryguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["retryguard"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
